# gitboard

./: .gitignore  .statistics.conf  LICENSE  README.md  app.go  app_test.go  go.mod  go.sum  handlers_claude.go  handlers_config.go  handlers_note.go  handlers_project.go  handlers_scan.go  handlers_summary.go  handlers_todo.go  helpers.go  hermes-probe-file.md  main.go  statistics.sh  wails.json
.github/: CODEOWNERS
.github/workflows/: pages.yml  release.yml
.monkeycode/docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INDEX.md  INTERFACES.md
.monkeycode/docs/专有概念/: Note.md  Project.md  Todo.md
.monkeycode/docs/模块/: db.md  grouper.md  scanner.md  stats.md  web.md
.monkeycode/specs/git-dashboard/: design.md  requirements.md  tasklist.md
.monkeycode/specs/project-todo-notes/: design.md  requirements.md  tasklist.md
docs/: index.html  release-tauri.yml.new  release.yml.new
internal/db/: db.go  queries.go  queries_test.go
internal/grouper/: grouper.go  grouper_test.go
internal/knowledge/: knowledge.go
internal/platform/: platform.go  platform_test.go
internal/scanner/: scanner.go
internal/server/: server.go
internal/stats/: stats.go  stats_test.go
scripts/: build.sh  generate-icons.mjs  generate_screenshots.py  install.ps1  install.sh  sync-knowledge.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: CommandPalette.tsx  (+10 more)
(+7 files in other folders)
