[package]
name = "gitboard"
version = "0.3.0"
description = "GitBoard - local Git dashboard"
authors = ["jiangcheng"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gitboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
